feat(dashboard): add “Open English Tutor” button
Adds a simple <nav> block near the end of index.html with a button linking to ./tutor/.
Verified closing tags order and kept one <body>. No other content changes.

--- a/index.html
+++ b/index.html
@@ -450,8 +450,14 @@
             });
 
         });
-    </script>
+   </script>
+<nav style="padding:8px 12px;border-bottom:1px solid #e5e7eb;margin-bottom:16px">
+  <a href="./tutor/" style="padding:10px 14px;border:1px solid #333;border-radius:8px;text-decoration:none">
+    Open English Tutor (20 scenarios)
+  </a>
+</nav>
 </body>
 </html>
-!-- redeploy -->
+
+
 
