feat(nav): add “Back to Dashboard” link
Added a <nav> block inside <body> with a link to ../ (dashboard).
Ensured it appears after the script and before </body>.

--- a/tutor/index.html
+++ b/tutor/index.html
@@ -409,5 +409,10 @@
       root.render(<App />);
       // -------- end App code --------
     </script>
+      <nav style="padding:8px 12px;border-bottom:1px solid #e5e7eb;margin-bottom:16px">
+  <a href="../" style="padding:10px 14px;border:1px solid #333;border-radius:8px;text-decoration:none">
+    Back to Dashboard
+  </a>
+</nav>
   </body>
 </html>
