--- a/tutor/index.html
+++ b/tutor/index.html
@@ -22,7 +22,7 @@
       // -------- App code (plain JS) --------
       const SCENARIOS = [
         { id: "cafe", name: "Ordering at a café", context: "Morning café in Riyadh. You want a medium drip coffee, black, for here.",
-          keyPhrases: ["Could I get ... please","For here or to go","Do you have almond or oat milk","That is all, thank you","Could you repeat the total","Name is You"],
+          keyPhrases: ["Could I get ... please","For here or to go","Do you have almond or oat milk","That is all, thank you","Could you repeat the total","Name is User"],
           counterpartOpeners: ["Barista: Hi there. What can I get started for you today?","Barista: Small, medium, or large? For here or to go?","Barista: Anything else today?"],
           help: { en: "Try: 'Could I get a medium drip coffee for here, please?'", ar: "استخدم صيغة طلب مهذبة. عبارة 'Could I get' طبيعية وأكثر لباقة." } },
 
